--- a/css/category.css
+++ b/css/category.css
@@ -15,6 +15,7 @@ main section.categories .category-container,
 }
 .category-container .income-category,
 .category-container .income-category-skeleton,
+.category-container .expense-category-skeleton,
 .category-container .expense-category {
   display: flex;
   flex-direction: column;
@@ -26,6 +27,7 @@ main section.categories .category-container,
 }
 .category-container .income-category ul,
 .category-container .income-category-skeleton ul,
+.category-container .expense-category-skeleton ul,
 .category-budgets .budget-list,
 .set-budgeted-container .set-budgeted-list,
 .category-container .expense-category ul {
@@ -38,6 +40,7 @@ main section.categories .category-container,
 }
 .category-container .income-category ul li,
 .category-container .income-category-skeleton ul li,
+.category-container .expense-category-skeleton ul li,
 .category-budgets .budget-list li,
 .set-budgeted-container .set-budgeted-list li,
 .category-container .expense-category ul li {
@@ -46,6 +49,7 @@ main section.categories .category-container,
 }
 .category-container .income-category ul li,
 .category-container .income-category-skeleton ul li,
+.category-container .expense-category-skeleton ul li,
 .set-budgeted-container .set-budgeted-list li,
 .category-budgets .budget-list li,
 .category-container .expense-category ul li {
@@ -55,7 +59,8 @@ main section.categories .category-container,
   width: 100%;
 }
 .category-container .income-category ul li .left-portion,
-.category-container .income-category-skeleton ul li .left-portion,
+.category-container .income-category-skeleton ul li .left-portion-skeleton,
+.category-container .expense-category-skeleton ul li .left-portion-skeleton,
 .set-budgeted-container .set-budgeted-list li .left-portion,
 .category-budgets .budget-list li .left-portion,
 .category-container .expense-category ul li .left-portion {
@@ -65,7 +70,8 @@ main section.categories .category-container,
   gap: 15px;
 }
 .category-container .income-category ul li .left-portion img,
-.category-container .income-category-skeleton ul li .left-portion img,
+.category-container .income-category-skeleton ul li .left-portion-skeleton img,
+.category-container .expense-category-skeleton ul li .left-portion-skeleton img,
 .category-budgets .budget-list li .left-portion img,
 .set-budgeted-container .set-budgeted-list li .left-portion img,
 .category-container .expense-category ul li .left-portion img {
@@ -79,7 +85,8 @@ main section.categories .category-container,
 }
 
 .category-container .income-category ul li .right-portion,
-.category-container .income-category-skeleton ul li .right-portion,
+.category-container .income-category-skeleton ul li .right-portion-skeleton,
+.category-container .expense-category-skeleton ul li .right-portion-skeleton,
 .category-budgets .budget-list li .right-portion,
 .set-budgeted-container .set-budgeted-list li .right-portion,
 .category-container .expense-category ul li .right-portion {
@@ -136,61 +143,82 @@ main section.categories .category-container,
   font-weight: 500;
 }
 
+.category-container .expense-category-skeleton h3,
 .category-container .income-category-skeleton h3 {
   width: 50%;
   height: 30px;
   border-radius: 5px;
-
+  background: linear-gradient(90deg, #f5f5f5 25%, #ececec 50%, #f5f5f5 75%);
+  background-size: 200% 100%;
+  animation: skeleton-loading 2s ease-in-out infinite;
+  border-radius: 4px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
-  animation: pulse 1.5s infinite;
+  -webkit-animation: skeleton-loading 2s ease-in-out infinite;
 }
-.category-container .income-category-skeleton ul li .left-portion .img {
+.category-container .expense-category-skeleton ul li .left-portion-skeleton .img,
+.category-container .income-category-skeleton ul li .left-portion-skeleton .img {
   width: 40px;
   padding: 3px;
   height: 40px;
   border-radius: 5px;
-
+  background: linear-gradient(90deg, #f5f5f5 25%, #ececec 50%, #f5f5f5 75%);
+  background-size: 200% 100%;
+  animation: skeleton-loading 2s ease-in-out infinite;
+  border-radius: 4px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
-  animation: pulse 1.5s infinite;
+  -webkit-animation: skeleton-loading 2s ease-in-out infinite;
 }
-.category-container .income-category-skeleton ul li .right-portion .img {
+.category-container .expense-category-skeleton ul li .right-portion-skeleton .img,
+.category-container .income-category-skeleton ul li .right-portion-skeleton .img {
   width: 40px;
   padding: 3px;
   height: 40px;
   border-radius: 5px;
-
+  background: linear-gradient(90deg, #f5f5f5 25%, #ececec 50%, #f5f5f5 75%);
+  background-size: 200% 100%;
+  animation: skeleton-loading 2s ease-in-out infinite;
+  border-radius: 4px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
-  animation: pulse 1.5s infinite;
+  -webkit-animation: skeleton-loading 2s ease-in-out infinite;
 }
-.category-container .income-category-skeleton ul li .left-portion p {
+.category-container .expense-category-skeleton ul li .left-portion-skeleton p,
+.category-container .income-category-skeleton ul li .left-portion-skeleton p {
   width: 12rem;
   padding: 3px;
   height: 40px;
   border-radius: 5px;
-
+  background: linear-gradient(90deg, #f5f5f5 25%, #ececec 50%, #f5f5f5 75%);
+  background-size: 200% 100%;
+  animation: skeleton-loading 2s ease-in-out infinite;
+  border-radius: 4px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
-  animation: pulse 1.5s infinite;
+  -webkit-animation: skeleton-loading 2s ease-in-out infinite;
 }
-@keyframes pulse {
+
+@keyframes skeleton-loading {
   0% {
-    background-color: #f0f0f0; /* Light gray */
-  }
-  50% {
-    background-color: #e0e0e0; /* Slightly darker gray */
+    background-position: 150% 0;
   }
   100% {
-    background-color: #f0f0f0; /* Light gray */
+    background-position: -150% 0;
   }
+}
+
+.active-category h3 {
+  display: none;
+}
+.active-category  .add-box{
+  display: none;
 }
