--- a/css/category.css
+++ b/css/category.css
@@ -147,7 +147,7 @@ main section.categories .category-container,
 .category-container .income-category-skeleton h3 {
   width: 50%;
   height: 30px;
-  border-radius: 5px;
+
   background: linear-gradient(90deg, #f5f5f5 25%, #ececec 50%, #f5f5f5 75%);
   background-size: 200% 100%;
   animation: skeleton-loading 2s ease-in-out infinite;
@@ -158,36 +158,48 @@ main section.categories .category-container,
   -o-border-radius: 5px;
   -webkit-animation: skeleton-loading 2s ease-in-out infinite;
 }
-.category-container .expense-category-skeleton ul li .left-portion-skeleton .img,
-.category-container .income-category-skeleton ul li .left-portion-skeleton .img {
+.category-container
+  .expense-category-skeleton
+  ul
+  li
+  .left-portion-skeleton
+  .img,
+.category-container
+  .income-category-skeleton
+  ul
+  li
+  .left-portion-skeleton
+  .img {
   width: 40px;
   padding: 3px;
   height: 40px;
-  border-radius: 5px;
+
   background: linear-gradient(90deg, #f5f5f5 25%, #ececec 50%, #f5f5f5 75%);
   background-size: 200% 100%;
   animation: skeleton-loading 2s ease-in-out infinite;
   border-radius: 4px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
+
   -webkit-animation: skeleton-loading 2s ease-in-out infinite;
 }
-.category-container .expense-category-skeleton ul li .right-portion-skeleton .img,
-.category-container .income-category-skeleton ul li .right-portion-skeleton .img {
+.category-container
+  .expense-category-skeleton
+  ul
+  li
+  .right-portion-skeleton
+  .img,
+.category-container
+  .income-category-skeleton
+  ul
+  li
+  .right-portion-skeleton
+  .img {
   width: 40px;
   padding: 3px;
   height: 40px;
-  border-radius: 5px;
   background: linear-gradient(90deg, #f5f5f5 25%, #ececec 50%, #f5f5f5 75%);
   background-size: 200% 100%;
   animation: skeleton-loading 2s ease-in-out infinite;
   border-radius: 4px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
   -webkit-animation: skeleton-loading 2s ease-in-out infinite;
 }
 .category-container .expense-category-skeleton ul li .left-portion-skeleton p,
@@ -200,10 +212,6 @@ main section.categories .category-container,
   background-size: 200% 100%;
   animation: skeleton-loading 2s ease-in-out infinite;
   border-radius: 4px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
   -webkit-animation: skeleton-loading 2s ease-in-out infinite;
 }
 
@@ -219,6 +227,6 @@ main section.categories .category-container,
 .active-category h3 {
   display: none;
 }
-.active-category  .add-box{
+.active-category .add-box {
   display: none;
 }
