--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ main section.active {
   gap: 10px;
 }
 .penny-info {
-  display: flex;
+  display: none;
   border: 2px solid rgb(157, 157, 157);
   flex-direction: column;
   justify-content: space-between;
@@ -156,6 +156,7 @@ main section.active {
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
+
 .penny-info .top {
   width: 100%;
   display: flex;
@@ -733,3 +734,27 @@ main section.active {
   filter: brightness(11);
   -webkit-filter: brightness(11);
 }
+
+.skeleton-penny-info ,.skeleton-card,.skeleton-title{
+  width: 100%;
+  height: 8rem;
+  background: linear-gradient(90deg, #f5f5f5 25%, #ececec 50%, #f5f5f5 75%);
+  background-size: 200% 100%;
+  animation: skeleton-loading 2s ease-in-out infinite;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+.skeleton-card{
+  height: 70px;
+}
+.deactivate{
+  display: none;
+}
+.skeleton-title{
+  width: 150px;
+  height: 35px;
+}
+
