--- a/css/home.css
+++ b/css/home.css
@@ -1320,3 +1320,15 @@
   filter: invert(1);
   -webkit-filter: invert(1);
 }
+
+.added-day-info{
+  width: 170px;
+  padding: 2px 10px 2px 10px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  color: #000000;
+  border: none;
+  background: linear-gradient(to right, #4facfe, #00f2fe);
+  clip-path: polygon(0 0, 100% 0, 96% 50%, 100% 100%, 0 100%);
+}
