--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,13 @@ header.main {
   align-items: center;
   width: 100vw;
 }
+/* header.main h2{
+  width: 200px;
+} */
 header .left {
   display: flex;
+  /* background: linear-gradient(to right, #4facfe, #00f2fe);
+  clip-path: polygon(0 0, 100% 0, 95% 50%, 100% 100%, 0 100%); */
   justify-content: start;
   align-items: center;
   gap: 12px;
@@ -273,11 +278,7 @@ main section.active {
   left: 0;
   width: 100%;
   height: 65px;
-  background: linear-gradient(
-    to bottom left,
-    rgb(38, 0, 255),
-    rgb(0, 191, 255)
-  );
+  background: linear-gradient(to right, #4facfe, #00f2fe);
   border-radius: 0px 0px 20px 20px;
   -webkit-border-radius: 0px 0px 20px 20px;
   -moz-border-radius: 0px 0px 20px 20px;
@@ -735,7 +736,9 @@ main section.active {
   -webkit-filter: brightness(11);
 }
 
-.skeleton-penny-info ,.skeleton-card,.skeleton-title{
+.skeleton-penny-info,
+.skeleton-card,
+.skeleton-title {
   width: 100%;
   height: 8rem;
   background: linear-gradient(90deg, #f5f5f5 25%, #ececec 50%, #f5f5f5 75%);
@@ -747,14 +750,13 @@ main section.active {
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
 }
-.skeleton-card{
+.skeleton-card {
   height: 70px;
 }
-.deactivate{
+.deactivate {
   display: none;
 }
-.skeleton-title{
+.skeleton-title {
   width: 150px;
   height: 35px;
 }
-
