--- a/css/category.css
+++ b/css/category.css
@@ -230,3 +230,13 @@ main section.categories .category-container,
 .active-category .add-box {
   display: none;
 }
+
+.category-container .income-category h3,.category-container .expense-category h3{
+  background: linear-gradient(to right, #00f2fe, #4facfe);
+  clip-path: polygon(0 0, 100% 0, 96% 50%, 100% 100%, 0 100%);
+  width: 15rem;
+  padding: 3px 5px 3px;
+}
+.app.dark .category-container .income-category h3,.app.dark .category-container .expense-category h3{
+ color: #000000;
+}
