--- a/css/home.css
+++ b/css/home.css
@@ -714,7 +714,6 @@
   justify-content: center;
   align-items: center;
   padding: 0px 10px;
- 
 }
 .income-body,
 .transfer-body {
@@ -724,7 +723,6 @@
   gap: 5px;
   justify-content: center;
   align-items: center;
-  
 }
 .sub-head-two {
   display: flex;
@@ -754,7 +752,6 @@
   justify-content: space-between;
   align-items: center;
   gap: 5px;
-  
 }
 .sub-head-two .account-body .child-body::before,
 .sub-head-two .category-body .child-body::before {
@@ -799,7 +796,6 @@
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
   overflow: hidden;
- 
 }
 .sub-head-two .account-body .child-body img,
 .sub-head-two .category-body .child-body img {
@@ -1260,12 +1256,12 @@
   position: absolute;
   bottom: -20px;
 }
-.category-options-body ul{
+.category-options-body ul {
   max-height: 400px;
   width: 100%;
   height: auto;
 }
-.category-options-body ul li.transfer{
+.category-options-body ul li.transfer {
   display: flex;
   width: 100%;
   flex-direction: row;
@@ -1273,15 +1269,14 @@
   align-items: center;
 }
 
-
 /* Side-footer  */
- .side-footer {
+.side-footer {
   display: none;
   z-index: 1;
   border-right: 1px solid rgb(205, 205, 205);
   height: 100%;
 }
- .side-footer ul.menu {
+.side-footer ul.menu {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1290,7 +1285,7 @@
   padding: 10px;
   gap: 10px;
 }
- .side-footer ul.menu li {
+.side-footer ul.menu li {
   display: flex;
   justify-content: start;
   align-items: center;
@@ -1300,14 +1295,15 @@
   padding-left: 8px;
   flex-grow: 1;
 }
- .side-footer ul.menu li img {
+.side-footer ul.menu li img {
   width: 25px;
 }
- .side-footer ul.menu li p {
+.side-footer ul.menu li p {
   font-size: 15px;
   font-weight: 500;
 }
- .side-footer ul.menu li:hover,  .side-footer ul.menu li.active {
+.side-footer ul.menu li:hover,
+.side-footer ul.menu li.active {
   background-color: rgb(138, 5, 239);
   color: #ffffff;
   border-radius: 10px;
@@ -1316,19 +1312,25 @@
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
- .side-footer ul.menu li:hover img,  .side-footer ul.menu li.active img {
+.side-footer ul.menu li:hover img,
+.side-footer ul.menu li.active img {
   filter: invert(1);
   -webkit-filter: invert(1);
 }
 
-.added-day-info{
+.added-day-info {
   width: 170px;
   padding: 2px 10px 2px 10px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  color: #000000;
+ color: #000000;
   border: none;
-  background: linear-gradient(to right, #4facfe, #00f2fe);
+  background: linear-gradient(to right, #00f2fe, #4facfe);
   clip-path: polygon(0 0, 100% 0, 96% 50%, 100% 100%, 0 100%);
+}
+
+.app.dark .added-day-info{
+  color: #000000;
+  background: linear-gradient(to right, #4facfe, #00f2fe);
 }
