--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,7 @@ main section.active {
   flex-direction: column;
   gap: 10px;
 }
+
 .penny-info {
   display: none;
   border: 2px solid rgb(157, 157, 157);
@@ -759,4 +760,16 @@ main section.active {
 .skeleton-title {
   width: 150px;
   height: 35px;
+}
+
+.account-header h3,
+.accounts h3 {
+  background: linear-gradient(to right, #00f2fe, #4facfe);
+  clip-path: polygon(0 0, 100% 0, 95% 50%, 100% 100%, 0 100%);
+  width: 8rem;
+  padding: 3px 5px 3px 15px;
+}
+.app.dark .account-header h3,
+.app.dark .accounts h3 {
+  color: #000000;
 }
