--- a/css/style.css
+++ b/css/style.css
@@ -763,13 +763,13 @@ main section.active {
 }
 
 
-.accounts h3 {
+/* .accounts h3 {
   background: linear-gradient(to right, #00f2fe, #4facfe);
   clip-path: polygon(0 0, 100% 0, 95% 50%, 100% 100%, 0 100%);
   width: 8rem;
   padding: 3px 5px 3px 15px;
-}
-.app.dark .account-header h3,
+} */
+/* .app.dark .account-header h3,
 .app.dark .accounts h3 {
   color: #000000;
-}
+} */
