--- a/css/darkmode.css
+++ b/css/darkmode.css
@@ -158,7 +158,6 @@
   -moz-transition: all 0s ease;
   -ms-transition: all 0s ease;
   -o-transition: all 0s ease;
-  border: none;
 }
 .app.dark main section.budgets .budget-input-container::after,
 .app.dark main section.budgets .budget-edit-container::after {
@@ -279,4 +278,10 @@
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
+}
+
+.app.dark .account-container .accounts .card {
+  padding: 10px 15px;
+  border: 1px solid grey;
+  border-radius: 10px;
 }
