--- a/css/home.css
+++ b/css/home.css
@@ -8,6 +8,9 @@
   scrollbar-width: none;
   padding-bottom: 140px;
 }
+.home-container{
+  position: relative;
+}
 .home-container header,
 .analysis-container header {
   width: 100%;
@@ -530,6 +533,7 @@
   -ms-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
 }
+
 
 .input-containers.active {
   display: flex;
