--- a/css/home.css
+++ b/css/home.css
@@ -496,7 +496,7 @@
 }
 .parent-detail-view {
   position: absolute;
-  top: 0;
+  top: -47px;
   left: 0;
   background-color: rgba(0, 0, 0, 0.507);
 
