--- a/css/home.css
+++ b/css/home.css
@@ -497,15 +497,25 @@
 .parent-detail-view {
   position: absolute;
   top: -47px;
-  left: 0;
+  left: 0px;
   background-color: rgba(0, 0, 0, 0.507);
-
   width: 100%;
   height: 100%;
   z-index: 2;
   display: none;
   justify-content: center;
   align-items: center;
+}
+.parent-detail-view::before{
+  content: "";
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  background-color: rgba(0, 0, 0, 0.507);
+  width: 100%;
+  height: 10%;
+  z-index: 2;
+
 }
 .parent-detail-view.active {
   display: flex;
