--- a/css/mediaQuery.css
+++ b/css/mediaQuery.css
@@ -1,4 +1,7 @@
 @media screen and (min-width:768px) {
+  .home-container{
+  position: relative;
+}
   .app {
     width: 100%;
     height: 100vh;
@@ -32,6 +35,9 @@
     overflow-y: scroll;
     display: grid;
     grid-template-columns: 1fr 4fr .5fr;
+  }
+  .home{
+    position: relative;
   }
   .change-font-style {
     font-size: 16px !important;
@@ -130,16 +136,14 @@ font-size: 14px !important;
     left: 73% !important;
   }
   .rr-container{
-    background-color: red !important;
-    width: 40rem !important;
-    height: 30rem !important;
-    left:50% !important;
-    top: 50% !important;
-    transform: translate(-50%,-50%);
-    -webkit-transform: translate(-50%,-50%);
-    -moz-transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
-    -o-transform: translate(-50%,-50%);
+    position: absolute;
+    background-color: rgb(255, 255, 255) !important;
+    width: 100% !important;
+    height: 100% !important;
+    left:0% !important;
+    top: 0% !important;
+    
+   
 }
 .rr-container header{
   color: #fff !important;
