--- a/css/home.css
+++ b/css/home.css
@@ -1390,3 +1390,11 @@
   height: 70px;
   background-color: #000000;
 }
+.app.dark .home-container .skeleton .skeleton-month-body,
+.app.dark .home-container .skeleton-outer .skeleton-inner li{
+  background: linear-gradient(90deg, #1a1a1a 25%, #222222 50%, #1a1a1a 75%);
+  -webkit-border-radius: 5px;
+  animation: skeleton-loading 2s ease-in-out infinite;
+  background-size: 200% 100%;
+  border-radius: 5px;
+}
