--- a/css/style.css
+++ b/css/style.css
@@ -294,13 +294,47 @@ main section.active {
 }
 .sidebar.active {
   display: block;
-  transition: all 0.3s ease;
+  /* transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
   -ms-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   animation: slideRight 0.3s ease;
-  -webkit-animation: slideRight 0.3s ease;
+  -webkit-animation: slideRight 0.3s ease; */
+}
+.sun-theme{
+  width: 80px;
+ 
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+marquee{
+  position: absolute;
+  top: -120px;
+}
+.cloud{
+  width: 300px;
+ z-index: 1;
+}
+.cloud-2{
+  width: 300px;
+  height: 200px;
+ z-index: 1;
+ position: absolute;
+ top: -50px;
+ left: -50px;
+}
+.cloud-3{
+ width: 300px;
+ height: 200px;
+ z-index: 1;
+ position: absolute;
+ top: -50px;
+ right: -60px;
+
+
 }
 .sidebar header img.user-profile {
   width: 100px;
