--- a/css/darkmode.css
+++ b/css/darkmode.css
@@ -322,5 +322,9 @@
   background-color: #000000;
 }
 .app.dark .currency-container{
-background-color: #2f2f2f;
+background-color: #000000;
+}
+
+.app.dark .account-container-body .edit-box .input-container {
+  background-color: rgb(36 36 36)
 }
